@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.99999948';
+our $VERSION='0.99999949';
 
 
 use 5.005;
